--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             account: {
                 id:              'account_001' // Highly recommended, required if using Pendo Feedback or OEM Adopt
-                // name:         'Apricot' // Optional
+                // name:         'Apple' // Optional
                 // is_paying:    'Active' // Recommended if using Pendo Feedback
                 // monthly_value:// Recommended if using Pendo Feedback
                 // planLevel:    // Optional
